2006-12-03  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: 
    * plugins/applet/docs/Makefile.am: Version 0.9.8
    * configure.in: Bump version number

2006-11-28  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-sync.c: Remove unnecessary warning when 
    built without LDAP support. Fixes #374257

2006-11-24  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * daemon/seahorse-daemon.c: Add option to seahorse-daemon to exec
    another process once it forks. This allows chaining into startup.

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c: Other initialization fixes.
    * daemon/seahorse-daemon.c: Quit properly when we get a signal 
    during initialization. 

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * daemon/seahorse-daemon.c: Make SSH proxy print out environment 
    variables when requested. 

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c:
    * src/seahorse-pgp-generate.c: Make new key passphrase prompts 
    be consistent. Fixes #377938

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-ssh-generate.glade: Hook up help button. Patch by
    milo_casagrande@yahoo.it. Fixes #376098
    
2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * AUTHORS:
    * help/C/seahorse.xml: 
    * src/seahorse-key-manager.c: Update to the user manual by 
    milo_casagrande@yahoo.it. Fixes #376098
    
2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-generate.glade: Make PGP generate dialog 
    be consistent with SSH one. Fixes #376707

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-delete.c: Don't prompt when deleting each key when 
    deleting public keys. Fixes bug #
