@@ -1,3 +1,9 @@
+2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-add-subkey.c:
+    * libseahorse/seahorse-pgp-key-op.c: Fix Add subkey dialog.
+    Fixes #382330
+
 2006-12-03  Nate Nielsen  <nielsen@memberwebs.com>
 
     * NEWS:
